# num-traits-flexible

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/: rustup.sh  test-all.sh  test.sh  test_full.sh
src/: cast.rs  lib.rs
src/impls/: float.rs  int.rs  macros.rs  mod.rs  std_base.rs
src/ops/: abs.rs  angles.rs  bitwise.rs  bounded.rs  epsilon.rs  exp.rs  float.rs  from_str.rs  hyp.rs  id.rs  inv.rs  log.rs  mod.rs  mul_add.rs  norm.rs  normal.rs  sign.rs  trig.rs
