[package]
authors = ["The Rust Project Developers", "Jacob Greenfield"]
description = "Numeric traits for generic mathematics"
documentation = "https://docs.rs/num-traits-flexible"
homepage = "https://github.com/Coder-256/num-traits-flexible"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science"]
license = "MIT"
repository = "https://github.com/Coder-256/num-traits-flexible"
name = "num-traits-flexible"
version = "0.2.6"
edition = "2018"
readme = "README.md"
exclude = ["/ci/*", "/.travis.yml"]
